# cen64-rs

./: .gitignore  Cargo.toml  build.rs  cen64.c  common.h.in  txt.txt
device/: cart_db.c
os/common/: alloc.h
os/posix/: alloc.c
os/winapi/: alloc.c
profile_results/AMDuProf-cen64-rs-Hotspots_Apr-13-2026_17-59-40/: cpu.db  report.csv  session.uprof
profile_results/AMDuProf-cen64-rs-Hotspots_Apr-13-2026_18-00-57/: report.csv  session.uprof
profile_results/AMDuProf-cen64-rs-Hotspots_Apr-13-2026_18-04-03/: cpu.db  report.csv  session.uprof
profile_results/AMDuProf-cen64-rs-Hotspots_Apr-13-2026_18-04-46/: cpu.db  report.csv  session.uprof
profile_results/AMDuProf-cen64-rs-Hotspots_Apr-13-2026_18-06-18/: cpu.db  report.csv  session.uprof
profile_results/AMDuProf-cen64-rs-Hotspots_Apr-13-2026_18-07-14/: report.csv  session.uprof
profile_results/AMDuProf-cen64-rs-Hotspots_Apr-13-2026_18-09-24/: cpu.db  report.csv  session.uprof
profile_results/AMDuProf-cen64-rs-Hotspots_Apr-13-2026_18-09-43/: cpu.db  report.csv  session.uprof
profile_results/AMDuProf-cen64-rs-Hotspots_Apr-13-2026_18-13-56/: cpu.db  report.csv  session.uprof
src/: ai.rs  bus.rs  c_compat.rs  dd.rs  dynarec.rs  gdb.rs  lib.rs  main.rs  options.rs  pi.rs  rdp.rs  ri.rs  rsp.rs  si.rs  vi.rs  vr4300.rs
src/common/: alloc.rs  mod.rs  rom.rs  save.rs
src/device/: cart_db.rs  mod.rs
types/src/: lib.rs  vr4300.rs
win-iconv-0.0.10/win-iconv-0.0.10/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  (+12 more)
(+74 files in other folders)
